Add lazy loading for feed
- Adding the library lozad for lazy loading
- Showing a loading spinner when loading images
- Only loading the first two images

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,2 +1,14 @@
 @tailwind preflight;
 @tailwind utilities;
+
+.w-0 {
+  width: 0;
+}
+
+.h-500 {
+  height: 500px;
+}
+
+.max-w-500 {
+  max-width: 500px;
+}
