--- a/src/components/__styles__/loading-spinner.css
+++ b/src/components/__styles__/loading-spinner.css
@@ -14,11 +14,7 @@
   border: 6px solid #fff;
   border-radius: 50%;
   animation: loading 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: #3d4852 transparent transparent transparent;
-}
-
-.light.loading div {
-  border-color: white transparent transparent transparent;
+  border-color: #7553bb transparent transparent transparent;
 }
 
 .loading div:nth-child(1) {
