Add posts with types
- Adding posts with type support allows us to add quotes and other types
  of posts in the future.
- Right now quotes are not limited in text size but should be in the
  future
- Adds more complexity to the feed
- Abstracts the post html out of the image component
- Adds tabs to the upload page

--- a/src/components/transitions/__styles__/color-transition.css
+++ b/src/components/transitions/__styles__/color-transition.css
@@ -2,3 +2,8 @@
   transition-property: color;
   transition-duration: 500ms;
 }
+
+.border-color-transition {
+  transition-property: border-color;
+  transition-duration: 500ms;
+}
