--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,10 @@
-@tailwind preflight;
+@tailwind base;
+@tailwind components;
 @tailwind utilities;
+
 body,
 html {
   height: 100%;
-}
-
-.w-0 {
-  width: 0;
 }
 
 .h-500 {
