Doing fill available method

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,21 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-:root {
-  --app-height: 100%;
-}
 
 html,
 body {
   padding: 0;
   margin: 0;
   overflow: hidden;
-  width: 100vw;
-  height: 100vh;
-
-  @media not all and (hover: hover) {
-    height: var(--app-height);
-  }
+  height: fill-available;
 }
 
 .h-500 {
