--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,7 +7,8 @@ body {
   padding: 0;
   margin: 0;
   overflow: hidden;
-  height: fill-available;
+  height: 100%;
+  min-height: stretch;
 }
 
 .h-500 {
