--- a/web/src/index.css
+++ b/web/src/index.css
@@ -2,11 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
-body {
-  padding: 0;
-  margin: 0;
-  overflow: hidden;
-  height: 100%;
-  min-height: stretch;
+.h-m-screen {
+  height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+  height: calc(var(--vh, 1vh) * 100);
 }
